# writings

./: Cargo.toml  Makefile.toml  README.md  justfile
html/: gleanings.html  hidden_words.html  prayers.html
src/: additional_tablet.rs  author.rs  book.rs  embed_all.rs  lib.rs  roman.rs  scraper_ext.rs  writings.sql  writings_visitor.rs
src/gleanings/: gleanings_paragraph.rs  gleanings_visitor.rs
src/hidden_words/: hidden_word.rs  hidden_words_visitor.rs
src/prayers/: prayer_kind.rs  prayer_paragraph.rs  prayer_source.rs  prayers_visitor.rs
update/: Cargo.toml
update/src/: main.rs
writings/: CHANGELOG.md  Cargo.toml  README.md
writings-api/: Cargo.toml  README.md
writings-api/src/: api_result.rs  by_ref.rs  gleanings.rs  hidden_words.rs  lib.rs  main.rs  meditations.rs  pagination.rs  prayers.rs  roman_number.rs  search.rs  util.rs
writings-macros/: Cargo.toml  README.md
writings-macros/src/: lib.rs  to_enum_schema.1.rs  to_enum_schema.rs  writings_trait.rs
writings/html/: call_divine_beloved.html  gleanings.html  hidden_words.html  meditations.html  prayers.html
writings/src/: additional_tablet.rs  author.rs  book.rs  citation.rs  embed_all.rs  error.rs  lib.rs  paragraph_style.rs  roman.rs  scraper_ext.rs  writings.rs  writings.sql  writings_trait.rs  writings_visitor.rs
writings/src/cdb/: cdb_paragraph.rs  cdb_visitor.rs  mod.rs
writings/src/gleanings/: gleanings_paragraph.rs  gleanings_visitor.rs  mod.rs
writings/src/hidden_words/: hidden_word.rs  hidden_words_visitor.rs  mod.rs
writings/src/meditations/: meditation_paragraph.rs  meditations_visitor.rs  mod.rs
writings/src/prayers/: mod.rs  prayer_kind.rs  prayer_paragraph.rs  prayer_source.rs  prayers_visitor.rs
writings/update/: Cargo.toml  README.md
writings/update/src/: main.rs
