[package]
name = "writings-api"
version = "0.1.0"
edition = "2024"
description = "Axum API for the Bahá’í Sacred Writings for use in Rust projects and APIs"
authors = ["Tom Grushka <tom@grushka.com>"]
homepage = "https://github.com/dra11y/writings"
repository = "https://github.com/dra11y/writings.git"

[features]
default = ["swagger"]
swagger = ["dep:utoipa-swagger-ui"]

[[bin]]
test = false
name = "main"
path = "src/main.rs"

[dependencies]
writings = { path = "../writings", features = ["embed-all", "utoipa", "indicium"], default-features = false }

axum-valid.workspace = true
axum = { workspace = true, features = ["http1", "json", "matched-path", "query", "macros", "tokio", "tower-log", "tracing"] }
diacritics.workspace = true
indicium.workspace = true
normalize-path-except.workspace = true
rapidfuzz.workspace = true
regex.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-layer.workspace = true
tower.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui = { optional = true, workspace = true, features = ["axum", "cache"] }
utoipa = { workspace = true, features = ["macros", "axum_extras", "chrono", "uuid"] }
validify.workspace = true
