[package]
name = "writings-macros"
version = "0.1.0"
edition = "2024"
description = "Proc Macros for `writings` -- The Bahá’í Sacred Writings for use in Rust projects and APIs"
authors = ["Tom Grushka <tom@grushka.com>"]
homepage = "https://github.com/dra11y/writings"
repository = "https://github.com/dra11y/writings.git"
license = "MIT AND Bahá’í International Community License"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
