[package]
name = "writings-update"
version = "0.1.0"
edition = "2024"

[dependencies]
writings = { path = "..", default-features = false, features = ["_visitors"] }

chrono = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
